fix scrollbar & design

--- a/src/components/layouts/AuthorizedLayout/AuthorizedLayout.module.scss
+++ b/src/components/layouts/AuthorizedLayout/AuthorizedLayout.module.scss
@@ -24,6 +24,7 @@
   width: calc(100% - 220px);
   margin-left: auto;
   overflow-y: scroll;
+  height: 100%;
 }
 
 @include s.devices(tablet-xl) {
@@ -40,5 +41,6 @@
     width: 100%;
     margin-left: 0;
     overflow-y: scroll;
+    height: calc(100% - 60px);
   }
 }
